<!--
  ~ Copyright (c) 2021 2bllw8
  ~ SPDX-License-Identifier: GPL-3.0-only
  -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="?android:attr/dialogPreferredPadding"
    android:paddingTop="?android:attr/dialogPreferredPadding">

    <TextView
        style="@android:style/TextAppearance.Material.Medium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password_change_message"
        android:layout_marginBottom="12dp" />

    <TextView
        style="@android:style/TextAppearance.Material.Caption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:labelFor="@id/currentFieldView"
        android:text="@string/password_hint_current" />

    <EditText
        android:id="@+id/currentFieldView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:maxLength="128"
        android:maxLines="1"
        android:singleLine="true" />

    <TextView
        style="@android:style/TextAppearance.Material.Caption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:labelFor="@id/passwordFieldView"
        android:text="@string/password_hint_field" />

    <EditText
        android:id="@+id/passwordFieldView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:maxLength="128"
        android:maxLines="1"
        android:singleLine="true" />

    <TextView
        style="@android:style/TextAppearance.Material.Caption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:labelFor="@id/repeatFieldView"
        android:text="@string/password_hint_repeat" />

    <EditText
        android:id="@+id/repeatFieldView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:maxLength="128"
        android:maxLines="1"
        android:singleLine="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="2dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/changeBtnNeutral"
            style="@android:style/Widget.Material.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password_change_forgot" />

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/changeBtnNegative"
            style="@android:style/Widget.Material.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@android:string/cancel"
            tools:ignore="ButtonOrder" />

        <Button
            android:id="@+id/changeBtnPositive"
            style="@android:style/Widget.Material.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password_change_action" />
    </LinearLayout>
</LinearLayout>
