<!--
  ~ Copyright (c) 2021 2bllw8
  ~ SPDX-License-Identifier: GPL-3.0-only
  -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="?android:attr/dialogPreferredPadding">

    <TextView
        style="@android:style/TextAppearance.Material.Medium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password_input_message"
        android:layout_marginBottom="12dp" />

    <TextView
        style="@android:style/TextAppearance.Material.Caption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:labelFor="@id/passwordFieldView"
        android:text="@string/password_hint_field" />

    <EditText
        android:id="@+id/passwordFieldView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:maxLength="128"
        android:maxLines="1"
        android:singleLine="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:orientation="horizontal">

        <Button
            android:id="@+id/inputBtnNegative"
            style="@android:style/Widget.Material.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@android:string/cancel" />

        <Button
            android:id="@+id/inputBtnPositive"
            style="@android:style/Widget.Material.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password_input_action" />
    </LinearLayout>
</LinearLayout>
